Thu Apr 24 18:33:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/BiDir_GIOP/BiDir_ORBInitializer.h
        * tao/BiDir_GIOP/BiDir_PolicyFactory.h
        * tao/CodecFactory/CDR_Encaps_Codec.h
        * tao/CodecFactory/CodecFactory_impl.h
        * tao/Codeset/Codeset_Manager_i.cpp
        * tao/Compression/Base_Compressor.h
        * tao/Compression/Compression_Manager.h
        * tao/Compression/Compressor_Factory.h
        * tao/Configurable_Refcount.h
        * tao/CSD_Framework/CSD_ORBInitializer.h
        * tao/CSD_Framework/CSD_Strategy_Base.h
        * tao/DiffServPolicy/Client_Network_Priority_Policy.cpp
        * tao/DiffServPolicy/Client_Network_Priority_Policy.h
        * tao/DiffServPolicy/DiffServPolicy_Factory.h
        * tao/DiffServPolicy/DiffServPolicy_ORBInitializer.h
        * tao/DiffServPolicy/Server_Network_Priority_Policy.cpp
        * tao/DiffServPolicy/Server_Network_Priority_Policy.h
        * tao/DynamicAny/DynAny_i.h
        * tao/DynamicAny/DynAnyFactory.h
        * tao/DynamicAny/DynArray_i.h
        * tao/DynamicAny/DynEnum_i.h
        * tao/DynamicAny/DynSequence_i.h
        * tao/DynamicAny/DynStruct_i.h
        * tao/DynamicAny/DynUnion_i.h
        * tao/DynamicInterface/AMH_DSI_Response_Handler.cpp
        * tao/DynamicInterface/AMH_DSI_Response_Handler.h
        * tao/DynamicInterface/DII_Reply_Handler.h
        * tao/EndpointPolicy/EndpointPolicy_Factory.h
        * tao/EndpointPolicy/EndpointPolicy_i.cpp
        * tao/EndpointPolicy/EndpointPolicy_i.h
        * tao/EndpointPolicy/EndpointPolicy_ORBInitializer.h
        * tao/EndpointPolicy/IIOPEndpointValue_i.cpp
        * tao/EndpointPolicy/IIOPEndpointValue_i.h
        * tao/IORInterceptor/IORInfo.h
        * tao/IORManipulation/IORManipulation.h
        * tao/IORTable/IOR_Table_Impl.h
        * tao/Messaging/AMH_Response_Handler.h
        * tao/Messaging/Buffering_Constraint_Policy.cpp
        * tao/Messaging/Buffering_Constraint_Policy.h